--- a/app/views/pages/home/_history.html.erb
+++ b/app/views/pages/home/_history.html.erb
@@ -11,7 +11,7 @@
       
       <%= render("_/card", head: "2017", body: "A close friend suggested I try my hand at web development after we discussed my passion for programming. This year I have fallen in love with it. I have always been fascinated by the principles and concepts of design, and it is electrifying to be able to combine these with programming. I am certain I have found my vocation and I know I will excel as I continue to develop my skills and abilities as a web developer.") %>
       
-      <%= render("_/card", head: "Maybe You Feel Like Reaching Out", contact: "CONTACT") %>
+      <%= render("_/card", head: "Find Out More By Getting In Touch", contact: "CONTACT") %>
     </div>
     
     <div class="modal"></div>
