--- a/app/views/pages/home/_work.html.erb
+++ b/app/views/pages/home/_work.html.erb
@@ -1,17 +1,17 @@
 <section id="work" class="section">
   <div class="container">
     <div class="cards">
-      <%= render("_/card", head: "My Work", body: "Find Out What I've Done.") %>
+      <%= render("_/card", head: "My Work Thus Far.", body: "Discover What I've Done and What I Can Do.") %>
       
-      <%= render("_/card", head: "AutoLisp", body: "During my time as a Controls Engineer, I programmed several time saving tools to be used with AutoCAD. I learned Lisp for all it was, good and bad. The bad parts I didn't like so much compared to the Ruby programming language so I decided to implement some of Ruby's usefulness for Lisp by creating a code interpreter that not only found and replaced some functionality, such as rest parameters, but also injected pseudo object oriented paradigms for lists to act like Ruby array objects.") %>
+      <%= render("_/card", head: "AutoLisp", body: "As a Controls Engineer, I programmed several time-saving tools designed for AutoCAD. I was surprised by the clunkiness of Lisp compared to the ease-of-use of Ruby, so I decided to implement some of Ruby's more useful elements into Lisp. I created a code interpreter that improves Lisp's functionality, such as allowing for rest parameters, and injects object-oriented paradigms for lists to behave like Ruby's array object.") %>
       
-      <%= render("_/card", head: "Bash Automation", body: "I attempted learning Ruby on Rails four separate times, failing the first three. I wasn't (and still amn't) a guru at the command line which was my biggest fear and pitfall for getting started. After making several apps using Rails in the Cloud9 environment, I made a couple bash scripts to completely automate the process from creating a new workspace in C9 to a live running app in Heroku and backed up on Github.") %>
+      <%= render("_/card", head: "Bash Scripting", body: "I failed the first three times I attempted to learn Ruby on Rails. Mastering the command line has always been a weakness of mine. But after coding several apps using Rails in the Cloud9 environment, I created two Bash scripts that completely automate the process from starting a new workspace in Cloud9 to a live running app in Heroku, all backed up on GitHub.") %>
       
-      <%= render("_/card", head: "Upskill Courses", body: "The one tutorial that brought everything together for me for Ruby on Rails was Upskill Courses. There I learned integrating gems, styling, backend, everything to get me started on my own projects. Everything I was confused about after finishing Michael Hartl's blog tutorial, Upskill clarified with ease. I started on my own projects after I finished because I was ready to create web apps on my own.") %>
+      <%= render("_/card", head: "Upskill Courses", body: "The Upskill tutorial was my paradigm shift in learning Ruby on Rails: integrating gems, styling, back-end, essentially everything I needed to get started on my own projects. All my confusion after finishing Michael Hartl's blog tutorial was immediately clarified by Upskill. I confidently began my own projects after finishing Upskill as I was ready to create web apps.") %>
       
-      <%= render("_/card", head: "This Site", body: "I really wanted to create a portfolio that was uniquely mine in every way. Every interaction and choice was completely by my own design and I'm proud for you to be viewing my site. Most of the work here was done on paper, as planning is important to me as a measure for successful execution. Thanks for visiting, please send me a comment to get in touch or just say 'Hi'.") %>
+      <%= render("_/card", head: "It's Business Time", body: "I wanted to make this portfolio uniquely mine in every way. Each line of code and each stylistic choice are my original design. As with all my projects, this site first existed on paper; I believe planning is the ultimate measure of successful execution. I am proud of this site and honored that you are here viewing it. Thank you for visiting, please feel free to get in touch or just say hey.") %>
       
-      <%= render("_/card", head: "Tell Me What You Think", contact: "CONTACT") %>
+      <%= render("_/card", head: "Find Out More By Getting In Touch", contact: "CONTACT") %>
     </div>
     
     <div class="modal"></div>
