--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,9 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!--favicon-->
+    <%= favicon_link_tag 'favicon.ico' %>
   </head>
 
   <body>
